Add Test methods for PlayerScore class
Test added:
testGetNumberOfCards
testGetSumOfCards
testGetNumberOfWagerCards
testGetScore
testSetBadNumberOfCards
testSetBadNumberOfWagerCards
testSetBadSumOfCards

--- a/gameScoreCalculator/build.gradle
+++ b/gameScoreCalculator/build.gradle
@@ -6,3 +6,12 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 }
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
+}
+
+test {
+    useJUnitPlatform()
+
+}
